Fixed back to work link, text align case study mobile view

--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -18,7 +18,7 @@ h2 {
   background: url("img/taxi-photo.jpg") no-repeat scroll right center / cover
     rgba(0, 0, 0, 0);
   height: auto;
-  margin: 0 0 5em;
+  margin: 0 0 2em;
   padding: 8em 0;
   text-align: center;
 }
@@ -188,7 +188,7 @@ aside.case-study-sidebar {
   flex-direction: column;
   justify-content: flex-start;
   align-items: left;
-  text-align: left;
+  text-align: center;
   margin: 0;
 }
 
@@ -213,7 +213,6 @@ aside h4 {
   font-family: "Open Sans", sans-serif;
   color: #3b3b3b;
   font-weight: 400;
-  text-align: left;
   margin: 0.5rem 0;
 }
 
@@ -449,6 +448,10 @@ form {
 /* --------------Media Queries------------- */
 
 @media (min-width: 768px) {
+  .home-page {
+    margin: 0 0 5em;
+  }
+
   .homepage-featured-work {
     list-style: none;
     width: 100%;
